web/static/css/style.css
@import url(https://fonts.googleapis.com/css?family=Pacifico|Press+Start+2P|family=Open+Sans:400,200);
body {
  color: #444;
  height: 100%;
  margin: auto;
  font: 600 16px/16px "Open Sans", sans-serif;
  background: #fefefe;
  transition: all 0.4s ease; }
  body.red {
    background: gold; }

ul {
  margin: 0;
  padding: 0; }

h1, h4 {
  font-family: "Pacifico", cursive; }

h1 {
  font-weight: 100;
  letter-spacing: -2px; }

h4 {
  font-weight: 100;
  font-size: 22px; }

p, h1, h4, label {
  color: #404040; }

p, input, label, input {
  font-family: "Open Sans", sans-serif;
  font-weight: 100; }

#mainarea {
  text-align: center; }

#waveWrapper, #wave, canvas {
  position: relative;
  z-index: 3; }

iframe#player {
  box-shadow: 0 1px 8px rgba(0, 0, 0, 0.3); }

#playerWrapper {
  position: relative;
  margin: auto;
  top: 15px;
  width: 700px;
  height: 394px; }

#confidence-indicator {
  position: relative;
  bottom: 65px;
  font-size: 18px; }

#new-video {
  background: white;
  position: absolute;
  left: 0;
  right: 0;
  height: 90px;
  transform: translateY(-180px);
  transition: all 0.4s ease;
  z-index: 2; }
  #new-video.active {
    transform: translateY(-90px); }
  #new-video input {
    font-style: italic;
    box-sizing: border-box;
    width: 100%;
    height: 100%;
    display: block;
    padding: 0 25px;
    font-size: 30px;
    border: none;
    color: #676767;
    border-bottom: solid 2px #c9c9c9;
    outline: none; }

#header {
  display: flex;
  align-items: center;
  background: rgba(0, 0, 0, 0.03);
  box-sizing: border-box;
  width: 100%;
  height: 90px; }
  #header .logo {
    background: url(/static/images/logo.png);
    width: 70px;
    height: 70px;
    background-size: 100%;
    background-repeat: no-repeat;
    margin-left: 22px; }
  #header .info {
    margin-left: 10px; }

.plusWrapper {
  position: absolute;
  z-index: 3;
  cursor: pointer;
  right: 20px;
  width: 43px;
  height: 43px; }
  .plusWrapper .circle {
    font-size: 26px;
    height: 100%;
    text-align: center;
    padding-top: 13px;
    color: white;
    box-sizing: border-box;
    border-radius: 50%; }
    .plusWrapper .circle.ear {
      background-color: #57deb2;
      position: absolute;
      top: 0;
      width: 100%;
      z-index: -1;
      transform: translateX(0);
      transition: all 0.4s ease; }
      .plusWrapper .circle.ear:hover {
        background-color: #2cd69e; }
      .plusWrapper .circle.ear.active {
        transform: translateX(-50px); }
    .plusWrapper .circle.plus {
      background-color: #3e9ff9;
      transition: all 0.4s ease;
      transform: rotate(0); }
      .plusWrapper .circle.plus:hover {
        background-color: #0d86f7; }
      .plusWrapper .circle.plus.active {
        transform: rotate(224deg); }
  .plusWrapper h1 {
    font-size: 32px;
    margin-bottom: 0; }
  .plusWrapper p {
    font-size: 16px; }
  .plusWrapper h4 {
    margin-bottom: 0;
    margin-top: 50px;
    padding: 0;
    line-height: 0; }
  .plusWrapper ul.samples {
    margin-top: 35px;
    text-align: center; }
    .plusWrapper ul.samples li {
      display: inline-block;
      box-sizing: border-box;
      width: 45%; }
      .plusWrapper ul.samples li:first-child {
        margin-right: 10px; }
      .plusWrapper ul.samples li img {
        height: auto;
        width: 100%; }

.social {
  z-index: 5;
  position: absolute;
  right: 15px;
  bottom: 15px; }
  .social li {
    list-style: none;
    margin-bottom: 5px;
    z-index: 2; }
    .social li a {
      transition: all 0.4s ease;
      width: 32px;
      height: 32px;
      background-size: 100%;
      display: block; }
      .social li a#twitter {
        background-image: url("../images/icons/twitter.png"); }
      .social li a#github {
        background-image: url("../images/icons/github-logo.png"); }
      .social li a#facebook {
        background-image: url("../images/icons/facebook.png"); }
      .social li a#reddit {
        background-image: url("../images/icons/reddit.png"); }
      .social li a:hover {
        transform: scale(1.3); }

.footer {
  width: 100%;
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
  text-align: center;
  font-size: 12px; }

.clearfix {
  clear: both; }

#loadingWrapper {
  background-color: rgba(0, 0, 0, 0.6);
  width: 100vw;
  height: 100vh;
  position: fixed;
  left: 0;
  top: 0;
  z-index: 9;
  opacity: 0;
  transition: visibility 0s, opacity 0.2s ease-in;
  visibility: hidden;
  opacity: 0; }
  #loadingWrapper.active {
    opacity: 1;
    visibility: visible; }
  #loadingWrapper .loading {
    width: 500px;
    height: auto;
    position: absolute;
    left: 50%;
    top: 50%;
    transform: translate(-50%, -50%);
    background: #434380;
    padding: 5px;
    border-radius: 4px;
    box-sizing: border-box;
    overflow: hidden; }
    #loadingWrapper .loading a {
      float: right;
      position: relative;
      bottom: 30px;
      right: 10px;
      color: white;
      font-family: "Pacifico";
      cursor: pointer; }
    #loadingWrapper .loading p {
      font-family: "Press Start 2P", cursive;
      color: white;
      text-align: center; }
    #loadingWrapper .loading img {
      width: 100%;
      height: auto; }

/*# sourceMappingURL=style.css.map */

